# ML_exercises

./: Makefile  README.md  environment.yml  pyproject.toml
kevin/: README.md  temperature_main.go
nathalie/: README.md
projekt_kn/: __init__.py  dataset.py  features.py  plots.py
projekt_kn/modeling/: predict.py  train.py
