[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "projekt_kn"
version = "0.0.1"
description = "test"
authors = [
  { name = "Nathalie" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["projekt_kn"]
include = ["pyproject.toml", "projekt_kn/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["projekt_kn"]
force-sort-within-sections = true

